manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo
  labels:
    app: demo
  annotations:
    description: |
      This is a gRPC server demo implementing the helloworld.proto
spec:
  replicas: 3
  selector:
    matchLabels:
      app: demo
  template:
    metadata:
      labels:
        app: demo
    spec:
      containers:
      - name: server
        image: replaceme-server
        ports:
        - containerPort: 50052
