manifests/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: demo
spec:
  selector:
    app: demo
  ports:
    - protocol: TCP
      port: 50052
      targetPort: 50052
      name: grpc
